# GpuMcSplit

./: README.md  command.txt  reactions_simil_clean.txt
GpuMaxSubGraph/: CMakeLists.txt  input.txt  output.txt  output_iterativo.txt
GpuMaxSubGraph/src/: Label.cpp  calc_bound.cpp  cuda_header.h  first_solution.cu  g2mol.cpp  gen_bond_labels.cpp  gen_initial_labels.cpp  gen_ring_classes.cpp  gen_rotations.cpp  gpu_header.hpp  gpu_mc_split.cpp  hood.cpp  initialized.cpp  kernel.cu  main.cpp  main.cu  main.hpp  mc_split.cpp  mcs_iterative.cpp  mol_mcs.cpp  pair_vertex.cpp  search_mcs.cpp  select_label.cpp  select_vertex.cpp  smiles_mcs.cpp  test.cu  test.hpp  testFra.cpp
